ros2_ws/log/build_2024-08-14_15-03-00/person_follower/stderr.log
  File "/home/orinnano/turtlebot3-person-follower/ros2_ws/install/person_follower/lib/python3.10/site-packages/src/person_follower.py", line 68
    else
        ^
SyntaxError: expected ':'

